--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/simplyCinema
 spring.datasource.username=postgres
 spring.datasource.password=project
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+//spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.main.allow-bean-definition-overriding=true
+
+spring.jpa.hibernate.ddl-auto=create
+
