add and change services.(customuserdetails)
added login, create user service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,16 @@ spring.main.allow-bean-definition-overriding=true
 
 #spring.jpa.hibernate.ddl-auto=create
 
+
+# Mail settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hs2312hemant@gmail.com
+spring.mail.password=yiwd fwav rzbz ogds
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#SMS Otp
+twilio.account_sid=ACaee594a70bd7beeba2e29680d190940d
+twilio.auth_token=9d64c62ac5cfff6a9f8f78a1fa8a22f5
+twilio.phone_number=YOUR_TWILIO_PHONE_NUMBER
