User services, completed...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #SMS Otp
-twilio.account_sid=ACaee594a70bd7beeba2e29680d190940d
-twilio.auth_token=9d64c62ac5cfff6a9f8f78a1fa8a22f5
+twilio.account_sid=your twilio account sid
+twilio.auth_token= your_twilio token
 twilio.phone_number=YOUR_TWILIO_PHONE_NUMBER
