added review services.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 twilio.account_sid=your twilio account sid
 twilio.auth_token= your_twilio token
 twilio.phone_number=YOUR_TWILIO_PHONE_NUMBER
+
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
+
