--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,10 @@ twilio.phone_number=YOUR_TWILIO_PHONE_NUMBER
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
+# Redis configuration
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+# Uncomment and set if you use a password
+# spring.redis.password=your_password
+
+
