--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=simplyCinema
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/simplyCinema
-spring.datasource.username=postgres
-spring.datasource.password=project
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,29 +11,19 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.main.allow-bean-definition-overriding=true
 
-#spring.jpa.hibernate.ddl-auto=create
-
-
 # Mail settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hs2312hemant@gmail.com
-spring.mail.password=yiwd fwav rzbz ogds
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#SMS Otp
-twilio.account_sid=your twilio account sid
-twilio.auth_token= your_twilio token
-twilio.phone_number=YOUR_TWILIO_PHONE_NUMBER
-
-#spring.sql.init.mode=always
-#spring.datasource.initialization-mode=always
+# SMS OTP
+#twilio.account_sid=${TWILIO_ACCOUNT_SID}
+#twilio.auth_token=${TWILIO_AUTH_TOKEN}
+#twilio.phone_number=${TWILIO_PHONE_NUMBER}
 
 # Redis configuration
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-# Uncomment and set if you use a password
-# spring.redis.password=your_password
-
-
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
